* Refactor `RequestStatementMapperTest` for readability. * Fix Checkstyle issues.